# Tiny-Wasm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Instuctions.hpp  Makefile  add.wasm  arm64_cheatsheet.txt  binary_demo.c  container_print.h  main.cpp  parser  parser.cpp  playground  playground.cpp  playground.py  readme.md  utils.h  wasmtest.cc
.github/workflows/: c-cpp.yml
include/: FloatUtils.h  Instuctions.hpp  Opcode.hpp  OverloadOperator.h  Parser.hpp  Utils.h  Wasm.hpp  WasmFunction.hpp  WasmType.hpp  container_print.h  movLargeImmediateDemo.cpp  parser.hpp  playground2.cpp  playground3.cpp  utils.h
include/Opcode/: Arithmetic.hpp  Base.hpp  Branch.hpp  Compare.hpp  LoadStore.hpp  Mov.hpp
include/Wasm/: Branch.hpp  CommonHeader.hpp  Emit.hpp  Exception.hpp  Execute.hpp  Initialize.hpp  Print.hpp  Stack.hpp  WasmFunction.hpp  WasmInterpreter.hpp
learning_material/: add.wat  arm64.s  decodeBinary.py  encodeDemo.cpp  float_playground.cpp  hello.s  longjmp.s  movLargeImmediateDemo.cpp  play2  play2.cpp  playground  playground.cpp  setjmp.s  test.js  test.s  x86.s
test/: add.wat  local.0.wasm  local.0.wat  local.1.wasm  local.1.wat  local.2.wat  local.json  local.wast
test/CH01/: add.wasm
test/CH02/: local.1.wasm  local.2.wasm
test/CH03/: arithmetic.0.wat  arithmetic.1.wasm  arithmetic.1.wat  arithmetic.json  arithmetic.wast  custom.json
test/CH04/: div.0.wasm  div.0.wat  div.1.wasm  div.1.wat  div.json  div.wast
test/CH05/: abs.wat  if.0.wasm  if.0.wat  if.json  if.wast
